--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "leaflet": "^1.3.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-leaflet": "^2.1.0",
     "react-scripts": "2.0.4"
   },
   "scripts": {
